# knotica

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.ai-state/: DESIGN.md  TECH_DEBT_LEDGER.md  TECH_DEBT_RESOLVED.md  calibration_log.md  observations.jsonl
.ai-state/decisions/: 001-agent-error-grammar-idempotency.md  002-search-pagination-cursor-envelope.md  003-tool-decomposition-thin-deterministic.md  004-config-unconfigured-contract.md  005-prewarm-strategy.md  006-record-schema-freeze.md  007-sdk-choice.md  008-single-mutation-path.md  009-adapter-package-decomposition.md  010-operation-guide-tool.md  011-source-citation-integrity.md  012-eval-core-hand-rolled-scorer.md  013-eval-dependency-isolation-pep735.md  014-eval-llm-access-and-trust-boundary.md  015-eval-metrics-write-path.md  016-eval-scalar-composition.md  017-frozen-corpus-clone-mechanism.md  018-golden-set-split-and-bootstrap.md  019-eval-harness-module-landing-order.md  020-dashboard-architecture.md  021-query-api.md  022-compiled-artifact-precedence.md  024-gap-fault-classifier.md  (+29 more)
.claude-plugin/: marketplace.json  plugin.json
commands/: curate.md  doctor.md  guillotine.md  ingest.md  lint.md  loop.md  migrate.md  query.md  setup.md  status.md
dashboard/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: CLAUDE_DESKTOP.md  PRE_PLAN.md  architecture.md  okf.md
hooks/: hooks.json  session_start.sh
scripts/: loop_runner.py  reconcile_manifest_v2.py  reflow_pdf_sources.py  review_golden.py  vault_second_pass.py
tests/: conftest.py  test_architecture_boundaries.py  test_arena.py  test_arena_race_characterization.py  test_baseline_probe.py  test_best_effort_characterization.py  test_branch_namespaces_characterization.py  test_branch_scoreboard.py  test_candidate_gate_characterization.py  test_cli_doctor.py  test_cli_eval.py  test_cli_gapfill.py  test_cli_init.py  test_cli_loop.py  test_cli_mcp.py  test_cli_migrate.py  test_cli_prompt.py  test_cli_service.py  test_cli_status.py  test_config.py  test_core_metrics.py  test_datasets_inventory.py  test_decision_envelope.py  test_discovery_import_boundary.py  test_dispatch_arena.py  test_dispatch_branches.py  test_dispatch_compile.py  test_dispatch_datasets.py  test_dispatch_golden.py  test_dispatch_loop.py  test_dispatch_telemetry.py  test_dispatch_vault_health.py  test_errors.py  test_eval_characterization.py  test_evals_cache.py  test_evals_citations.py  test_evals_config.py  test_evals_golden.py  test_evals_harness.py  test_evals_judge.py  (+87 more)
vault-template/: .gitattributes  .gitignore  SCHEMA.md  START_HERE.md  index.md  log.md
(+279 files in other folders)
