[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knotica"
version = "0.1.0"
description = "AI-maintained, compounding knowledge wiki (llm-wiki): stateless MCP server + CLI over an Obsidian vault"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28",
]

[project.scripts]
knotica = "knotica.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knotica"]

# `knotica init` scaffolds new vaults from the packaged template. The template is
# authored at the repo root (vault-template/) and mapped into the wheel under
# knotica/vault-template so importlib.resources can reach it from the installed
# package. Editable/dev installs resolve the repo-root copy instead (init-time
# fallback; see docs/architecture.md).
[tool.hatch.build.targets.wheel.force-include]
"vault-template" = "knotica/vault-template"

[tool.ruff]
target-version = "py312"
line-length = 100
